update 11.10